// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows user to customize widget subtitle 1`] = `
Array [
  Object {
    "payload": Object {
      "card": Object {
        "backgroundColor": "transparent",
        "border": "none",
        "borderRadius": 0,
        "enabled": true,
        "hasShadow": false,
      },
      "legend": Object {
        "alignment": "left",
        "enabled": true,
        "layout": "horizontal",
        "position": "top",
      },
      "subtitle": Object {
        "content": "@subtitle",
      },
      "title": Object {
        "content": "",
      },
    },
    "type": "app/updateWidgetSettings",
  },
]
`;

exports[`allows user to customize widget title 1`] = `
Array [
  Object {
    "payload": Object {
      "card": Object {
        "backgroundColor": "transparent",
        "border": "none",
        "borderRadius": 0,
        "enabled": true,
        "hasShadow": false,
      },
      "legend": Object {
        "alignment": "left",
        "enabled": true,
        "layout": "horizontal",
        "position": "top",
      },
      "subtitle": Object {
        "content": "",
      },
      "title": Object {
        "content": "@title",
      },
    },
    "type": "app/updateWidgetSettings",
  },
]
`;
